remove project from site

--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ projects:
       - personal-website
       - ShopifyDeveloperChallenge
       - PortfolioWebsite
+      - djoksimo.github.io
 
 social_media:
   hackerrank: djoksimo
