remove project from site

--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,7 @@ projects:
       - ShopifyDeveloperChallenge
       - PortfolioWebsite
       - djoksimo.github.io
+      - FlappyFuture
 
 social_media:
   hackerrank: djoksimo
