Add resume link + icon

--- a/_config.yml
+++ b/_config.yml
@@ -37,6 +37,7 @@ social_media:
   keybase: jokdanilo
   linkedin: djoksimo
   medium: jokdanilo
+  resume: file/d/1ZBjBUqZe_gbAO0sH5HRzaCSpnnvBXcrh/view?usp=sharing
 
 topics:
   - name: Security
